--- a/src/app/discipline-preferences/discipline-preferences.component.html
+++ b/src/app/discipline-preferences/discipline-preferences.component.html
@@ -1,4 +1,5 @@
 <div class="discipline-preferences">
+  <div class="left-pannel">
   <h2>{{ discipline?.name }}</h2>
   <div *ngFor="let timetable of discipline?.timetable">
     {{ timetable.option }}
@@ -7,6 +8,8 @@
       Your current option
     </span>
   </div>
+</div>
+<div class="right-pannel">
   <form [formGroup]="preferencesForm">
     <div class="form-group" formArrayName="options" *ngFor="let preference of dynamicOptions.controls; let i=index">
       <div [formGroup]="preference">
@@ -22,6 +25,7 @@
       </div>
     </div>
   </form>
+</div>
 
   <button class="submit-button" mat-raised-button (click)="submit()" [disabled]="preferencesForm.invalid">SAVE</button>
   <button class="submit-button" mat-raised-button (click)="sendPreference()" [disabled]="isSentOptionDisabled()">Send preference</button>
