--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -50,6 +50,7 @@
     align-items: center;
     --avatar-size: 8rem;
     margin-bottom: 20px;
+    font-weight: 500;
 
     height: inherit;
     width: 100%;
