--- a/src/app/discipline-preferences/discipline-preferences.component.scss
+++ b/src/app/discipline-preferences/discipline-preferences.component.scss
@@ -3,5 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
+.discipline-preferences {
+    max-height: 600px;
 }
