Modified some scss files

--- a/src/app/forgot-password/forgot-password.component.scss
+++ b/src/app/forgot-password/forgot-password.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .reset-password-container {
     width: 380px;
     margin: auto;
@@ -33,6 +35,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: rgb(97, 26, 26);
+    background-color: $color-3;
     color: white;
 }
