--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -24,7 +24,7 @@
                         </ng-container>
                     <ng-container matColumnDef="actions">
                         <th mat-header-cell *matHeaderCellDef>
-                            actions
+                            Actions
                         </th>
                         <td mat-cell *matCellDef="let element" class="no-field-padding">
                             <div class="icons">
