--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -92,6 +92,10 @@
     .details-tabs {
         display: block;
         margin-top: 50px;
+
+        .mobile-tabs {
+            margin-top: 1em;
+        }
     }
 }
 
