Added a progress bar on preferences options and restyled the components

--- a/src/app/admin-edit-discipline/admin-edit-discipline.component.scss
+++ b/src/app/admin-edit-discipline/admin-edit-discipline.component.scss
@@ -79,6 +79,12 @@ h1 {
     .dynamic-details {
         display: flex;
         flex-direction: column;
+
+        .action-buttons {
+            display: flex;
+            align-items: center;
+            padding-left: 20px;
+        }
     }
 }
 
