--- a/src/app/discipline-details/discipline-details.component.scss
+++ b/src/app/discipline-details/discipline-details.component.scss
@@ -69,6 +69,9 @@
 .export-button:hover {
     color: rgba(255, 255, 255, 0.8);;
 }
+.export-button:disabled:hover {
+    color: rgba(0, 0, 0, 0.26);
+}
 
 .timetable-disabled {
     color: transparent;
