--- a/src/app/discipline-preferences/discipline-preferences.component.scss
+++ b/src/app/discipline-preferences/discipline-preferences.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .no-discipline {
     display: flex;
     flex-direction: column;
@@ -7,4 +9,55 @@
 
 .discipline-preferences {
     max-height: 600px;
+    display: flex;
+    flex-direction: column;
+}
+
+.discipline-card {
+    padding: 0;
+
+    .header-container {
+        background: $color-4;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+    }
+    
+    .content {
+        padding: 10px 12px;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+.panel {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1.5em;
+}
+
+.action-buttons {
+    margin-top: 2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+table {
+    border-collapse: separate;
+    border-spacing: 0.75em;
+    text-align: left;
+
+    .occupancy-cell {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .panel {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
