--- a/src/app/discipline-preferences/discipline-preferences.component.scss
+++ b/src/app/discipline-preferences/discipline-preferences.component.scss
@@ -54,6 +54,24 @@ table {
     }
 }
 
+.green { 
+    .mat-progress-bar-fill::after {
+        background-color: green;
+    }
+}
+
+.orange { 
+    .mat-progress-bar-fill::after {
+        background-color: orange;
+    }
+}
+
+.red { 
+    .mat-progress-bar-fill::after {
+        background-color: red;
+    }
+}
+
 @media screen and (max-width: 960px) {
     .panel {
         display: flex;
