--- a/src/app/admin-edit-discipline/admin-edit-discipline.component.scss
+++ b/src/app/admin-edit-discipline/admin-edit-discipline.component.scss
@@ -79,11 +79,20 @@ h1 {
     .dynamic-details {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        padding-bottom: 20px;
 
-        .action-buttons {
+        .action-buttons-area {
             display: flex;
             align-items: center;
             padding-left: 20px;
+        }
+
+        .timetable-button {
+            width: 80%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
         }
     }
 }
