--- a/src/app/discipline-preferences/discipline-preferences.component.scss
+++ b/src/app/discipline-preferences/discipline-preferences.component.scss
@@ -14,7 +14,7 @@
 }
 
 .discipline-card {
-    padding: 0;
+    padding: 0 !important;
 
     .header-container {
         background: $color-4;
@@ -77,5 +77,9 @@ table {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .right-pannel {
+        padding-top: 20px;
     }
 }
