Hind added for saving preference

--- a/src/app/admin-edit-discipline/admin-edit-discipline.component.html
+++ b/src/app/admin-edit-discipline/admin-edit-discipline.component.html
@@ -101,6 +101,9 @@
                                     <mat-icon color="error" class="delete-btn">
                                         delete</mat-icon>
                                 </button>
+                                <button mat-icon-button>
+                                    <mat-icon>people</mat-icon>
+                                </button>
                             </div>
                         </div>
                     </div>
