--- a/src/app/discipline-preferences/discipline-preferences.component.html
+++ b/src/app/discipline-preferences/discipline-preferences.component.html
@@ -64,7 +64,7 @@
 
   <div class="tooltip-actions">
     <span class="tooltip">
-      *In order to send the preferences to validation you have to save them first
+      *HINT: In order to send the preferences to validation you have to save them first
     </span>
     <div class="action-buttons">
 
