--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,63 +7,86 @@
 
   <div class="bank">
     <div fxShow="true" fxHide.lt-md="true" class="menu-items">
-      <a mat-button *ngIf="getUserState() && isAdmin()" [routerLink]="['/dashboard']" class="menu-item" routerLinkActive="active">Dashboard</a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" class="menu-item" routerLinkActive="active">Disciplines</a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/preferences']" class="menu-item" routerLinkActive="active">Preferences</a>
+      <a mat-button *ngIf="getUserState() && isAdmin()" [routerLink]="['/dashboard']" class="menu-item"
+        routerLinkActive="active">Dashboard</a>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" class="menu-item"
+        routerLinkActive="active">Disciplines</a>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/preferences']" class="menu-item"
+        routerLinkActive="active">Preferences</a>
     </div>
   </div>
 
   <span class="spacer"></span>
   <div class="bank">
     <div fxShow="true" fxHide.lt-md="true" class="menu-items">
-        <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" class="menu-item" routerLinkActive="active">Profile</a>
-        <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" class="menu-item" routerLinkActive="active">Login</a>
-        <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" class="menu-item" routerLinkActive="active" (click)="logout()">Logout</a>
+      <button mat-icon-button
+        matTooltip="For any problems, upgrade account, please send an email to eusebiu.testing@gmail.com"
+        aria-label="Button that displays a tooltip when focused or hovered over">
+        <mat-icon>help_outline</mat-icon>
+      </button>
+
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" class="menu-item"
+        routerLinkActive="active">Profile</a>
+      <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" class="menu-item"
+        routerLinkActive="active">Login</a>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" class="menu-item" routerLinkActive="active"
+        (click)="logout()">Logout</a>
     </div>
   </div>
 
   <div fxShow="true" fxHide.gt-sm="true" class="mobile-menu">
+    <button mat-icon-button
+        matTooltip="For any problems, upgrade account, please send an email to eusebiu.testing@gmail.com"
+        aria-label="Button that displays a tooltip when focused or hovered over">
+        <mat-icon>help_outline</mat-icon>
+      </button>
     <button mat-icon-button (click)="sidenav.toggle()" class="menu-button">
       <mat-icon>menu</mat-icon>
     </button>
   </div>
-  
+
 </mat-toolbar>
 <mat-sidenav-container fxFlexFill class="sidenav-container">
 
-  <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over"  opened="false" fxHide.gt-sm="true">
+  <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
     <mat-nav-list>
-      <a mat-button *ngIf="getUserState() && isAdmin()" [routerLink]="['/dashboard']" routerLinkActive="active-text" (click)="sidenav.close()">
+      <a mat-button *ngIf="getUserState() && isAdmin()" [routerLink]="['/dashboard']" routerLinkActive="active-text"
+        (click)="sidenav.close()">
         <mat-icon>
           dashboard
         </mat-icon>
         Dashboard
       </a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" routerLinkActive="active-text" (click)="sidenav.close()">
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" routerLinkActive="active-text"
+        (click)="sidenav.close()">
         <mat-icon>
           book
         </mat-icon>
         Disciplines
       </a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/preferences']" routerLinkActive="active-text" (click)="sidenav.close()">
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/preferences']" routerLinkActive="active-text"
+        (click)="sidenav.close()">
         <mat-icon>
           library_add_check
         </mat-icon>
         Preferences
       </a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" routerLinkActive="active-text" (click)="sidenav.close()">
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" routerLinkActive="active-text"
+        (click)="sidenav.close()">
         <mat-icon>
           account_box
         </mat-icon>
         Profile
       </a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" routerLinkActive="active-text" (click)="sidenav.close(); logout()">
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" routerLinkActive="active-text"
+        (click)="sidenav.close(); logout()">
         <mat-icon>
           logout
         </mat-icon>
         Logout
       </a>
-      <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" routerLinkActive="active-text" (click)="sidenav.close()">Login</a>
+      <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" routerLinkActive="active-text"
+        (click)="sidenav.close()">Login</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content fxFlexFill>
