Modelled a new confirm password validation

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
         <header>
             <div class="title-header">
                 <mat-icon>lock_open</mat-icon>
-                <p>Login in to your account</p>
+                <p>Sign in to your account</p>
             </div>
         </header>
         <form [formGroup]="loginForm">
