--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -38,7 +38,7 @@
 
             <mat-form-field appearance="fill">
                 <mat-label>Confirm password</mat-label>
-                <input matInput [type]="hideFlag ? 'password' : 'text'" formControlName="confirmPassword">
+                <input matInput [type]="hideFlag ? 'password' : 'text'" formControlName="confirmPassword" [minlength]="this.registerForm.controls.password.value.length">
                     <button mat-icon-button matSuffix (click)="hideFlag = !hideFlag" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideFlag">
                 <mat-icon>{{ hideFlag ? 'visibility_off' : 'visibility' }}</mat-icon>
                 </button>
