Added a page for the notFound page

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -36,7 +36,7 @@
 
   <div fxShow="true" fxHide.gt-sm="true" class="mobile-menu">
     <button mat-icon-button
-        matTooltip="For any problems, upgrade account, please send an email to eusebiu.testing@gmail.com"
+        matTooltip="For any kind of problems or to upgrade the account, please send an email to eusebiu.testing@gmail.com"
         aria-label="Button that displays a tooltip when focused or hovered over">
         <mat-icon>help_outline</mat-icon>
       </button>
