--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
   <div class="bank">
     <div fxShow="true" fxHide.lt-md="true" class="menu-items">
       <button mat-icon-button
-        matTooltip="For any problems, upgrade account, please send an email to eusebiu.testing@gmail.com"
+        matTooltip="For any kind of problems or to upgrade the account, please send an email to eusebiu.testing@gmail.com"
         aria-label="Button that displays a tooltip when focused or hovered over">
         <mat-icon>help_outline</mat-icon>
       </button>
