--- a/src/app/discipline-preferences/discipline-preferences.component.scss
+++ b/src/app/discipline-preferences/discipline-preferences.component.scss
@@ -86,6 +86,10 @@ table {
 }
 
 @media screen and (max-width: 960px) {
+    .discipline-preferences {
+        margin-top: 100px;
+    }
+    
     .panel {
         display: flex;
         flex-direction: column;
