--- a/src/app/delete-user/delete-user.component.scss
+++ b/src/app/delete-user/delete-user.component.scss
@@ -6,6 +6,7 @@
         font-size: 100px;
         height: 100px ;
         width: 100px;
+        color: rgba(0, 0, 0, 0.7);
     }
 
     display: flex;
@@ -20,5 +21,11 @@
         justify-content: center;
         background-color: $color-3;
         color: white;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .delete-account-container {
+        padding-top: 3em;
     }
 }
