--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -48,9 +48,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     --avatar-size: 8rem;
     margin-bottom: 20px;
     font-weight: 500;
+    color: rgba(0, 0, 0, 0.76);
 
     height: inherit;
     width: 100%;
