--- a/src/app/discipline-preferences/discipline-preferences.component.scss
+++ b/src/app/discipline-preferences/discipline-preferences.component.scss
@@ -50,11 +50,17 @@
     color: rgba(0, 0, 0, 0.6);
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+}
+
 .action-buttons {
     margin-top: 1em;
+    margin-bottom: 1em;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 table {
