--- a/src/app/disciplines/disciplines.component.scss
+++ b/src/app/disciplines/disciplines.component.scss
@@ -36,6 +36,7 @@
 
 .disciplines-tab {
     padding-top: 20px;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
