Some small style improvements

--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -1,7 +1,7 @@
 <div class="preferences-container">
     <mat-drawer-container class="sidenav-container">
         <mat-drawer #sidenav [mode]="mode" [opened]="openSidenav" class="menu">
-            <h2>Disciplines
+            <h2 align="center">Disciplines
                 <button *ngIf="!openSidenav" mat-icon-button (click)="sidenav.toggle()">
                     <mat-icon>
                         arrow_left
