--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -23,7 +23,7 @@
                         <td mat-cell *matCellDef="let element">{{element.teacher}}</td>
                         </ng-container>
                     <ng-container matColumnDef="actions">
-                        <th mat-header-cell *matHeaderCellDef>
+                        <th mat-header-cell *matHeaderCellDef class="actions-cell">
                             Actions
                         </th>
                         <td mat-cell *matCellDef="let element" class="no-field-padding">
