--- a/src/app/admin-edit-discipline/admin-edit-discipline.component.html
+++ b/src/app/admin-edit-discipline/admin-edit-discipline.component.html
@@ -1,7 +1,7 @@
 <header class="title-container">
     <div class="title-wrapper">
-        <div class="heading-wrapper">
-            <h1>Discipline configurator: {{discipline?.name}}</h1>
+        <div class="heading-wrapper" *ngIf="discipline">
+            <h1>Discipline configurator: {{ getDisciplineInitials(discipline.name) | uppercase }}</h1>
         </div>
     </div>
 </header>
