--- a/src/app/discipline-preferences/discipline-preferences.component.scss
+++ b/src/app/discipline-preferences/discipline-preferences.component.scss
@@ -35,7 +35,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 1.5em;
-    justify-items: end;
+    justify-items: center;
 }
 
 .tooltip-actions {
